Fixed some spacing issues

--- a/bom-thoughts/styles/styles.css
+++ b/bom-thoughts/styles/styles.css
@@ -205,6 +205,7 @@ footer a {
     grid-row: 2/3;
     padding-bottom: 50px;
     padding-left: 50px;
+    padding-right: 20px;
 }
 
 #trustimage {
@@ -223,4 +224,5 @@ footer a {
     grid-column: 2/3;
     grid-row: 3/4;
     padding: 50px;
+    padding-left: 20px;
 }
